css/main.css
/* ... */
.intro-header .page-heading h1 {
  margin-top: 0;
  font-size: 40px;
}
.intro-header .post-heading h1 {
  margin-top: 0;
  font-size: 35px;
}
.intro-header .page-heading .page-subheading,
.intro-header .post-heading .post-subheading {
  font-size: 27px;
  line-height: 1.1;
  display: block;
  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-weight: 300;
  margin: 10px 0 0;
}
.intro-header .post-heading .post-subheading {
  margin-bottom: 20px;
}

.header-section.has-img .no-img {
  margin-top: 0;
  background-color: #FCFCFC;
  margin: 0 0 40px;
  padding: 20px 0;
  box-shadow: 0 0 5px #AAA;
}
/* Many phones are 320 or 360px, so make sure images are a proper aspect ratio in those cases */
.header-section.has-img .intro-header.no-img {
  display: none;
}
@media only screen and (max-width: 365px) {
  .header-section.has-img .intro-header.no-img {
    display: block;
  }
}

.caption {
  text-align: center;
  font-size: 14px;
  padding: 10px;
  font-style: italic;
  margin: 0;
  display: block;
  border-bottom-right-radius: 5px;
  border-bottom-left-radius: 5px;
}

#header-gh-btns {
  margin-bottom: 15px;
}
@media only screen and (max-width: 500px) {
  #header-gh-btns > iframe {
    display: block;
    margin-bottom: 5px;
  }
}

/* --- Pager --- */

.pager li a {
  font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
  text-transform: uppercase;
  font-size: 14px;
  font-weight: 800;
  letter-spacing: 1px;
  padding: 10px 5px;
  background-color: #FFF;
  border-radius: 0;
  color: #404040;
}
@media only screen and (min-width: 768px) {
  .pager li a {
    padding: 15px 25px;
  }
}
.pager li a:hover,
.pager li a:focus {
  color: #FFF;
  border: 1px solid {{ site.hover-col }};
  background-color: {{ site.hover-col }};
}

.pager {
  margin: 10px 0 0;
}

.pager.blog-pager {
  margin-top: 0;
}

@media only screen and (min-width: 768px) {
  .pager.blog-pager  {
    margin-top: 10px;
  }
}

/* --- Tables --- */

table {
  padding: 0;
}
table tr {
  border-top: 1px solid #cccccc;
  background-color: #ffffff;
  margin: 0;
  padding: 0;
}
table tr:nth-child(2n) {
  background-color: #f8f8f8;
}
table tr th {
  font-weight: bold;
  border: 1px solid #cccccc;
  text-align: left;
  margin: 0;
  padding: 6px 13px;
}
table tr td {
  border: 1px solid #cccccc;
  text-align: left;
  margin: 0;
  padding: 6px 13px;
}
table tr th :first-child,
table tr td :first-child {
  margin-top: 0;
}
table tr th :last-child,
table tr td :last-child {
  margin-bottom: 0;
}

/* --- Code blocks --- */

pre {
  font-size: 16px;
  line-height: 1.5em;
}
pre code {
  white-space: pre-wrap;
  word-break: break-word;
}
pre.highlight, .highlight > pre, td.code pre {
  background-color: #FAFAFA;
  background-image: linear-gradient(#FDFDFD 50%, #F7F9FF 50%);
  background-repeat: repeat;
  background-size: 3em 3em;
  background-position: 0px 5px;
  border-left: 5px solid #9AC;
  padding: 5px 7px;
}
code table, code table td, code table th, code table tbody, code table tr,
td.gutter pre {
  padding: 0;
  border: none;
  background-color: #fff;
}
td.code pre {
  border-width: 0 0 0 2px;
  border-style: solid;
  border-color: #444;
  border-radius: 0;
}
td.gutter {
  padding-top: 3px;
}

/* --- Social media sharing section --- */

#social-share-section {
  margin-bottom: 30px;
}

/* --- Notification boxes --- */
.box-note, .box-warning, .box-error {
  padding: 15px 15px 15px 10px;
  margin: 20px 20px 20px 5px;
  border: 1px solid #eee;
  border-left-width: 5px;
  border-radius: 5px 3px 3px 5px;
}

.box-note {
  background-color: #eee;
  border-left-color: #2980b9;
}

.box-warning {
  background-color: #fdf5d4;
  border-left-color: #f1c40f;
}

.box-error {
  background-color: #f4dddb;
  border-left-color: #c0392b;
}

/* Fix table border github gist snippets */

.gist, .gist-file table tr {
  border: unset;
}

.gist, .gist-file table tr td {
  border: unset;
}

/* Fix .navbar-toggle */

.navbar-default button.navbar-toggle:focus,
.navbar-default button.navbar-toggle:hover {
  background-color: initial;
}

.navbar-default button.navbar-toggle[aria-expanded="true"] {
  background-color: rgba(0, 0, 0, 0.2);
}

.email-obfuscation span:nth-child(2n){
  display: none;
}

.footer-donation-addr {
  margin-bottom: 1em;
}
.footer-donation-addr a {
  font-size: 0.8vw
}
@media only screen and (max-width: 1400px) {
  .footer-donation-addr a {
    font-size: 1.7vw
  }
}
@media only screen and (max-width: 600px) {
  .footer-donation-addr a {
    font-size: 2.9vw
  }
}

.sponsor-container {
  display: flex;
  align-items: baseline;
  justify-content: center;
  flex-wrap: wrap;
}

.sponsor {
  margin: 10px 30px;
}

.subnav {
  flex: 1;
  font-size: 14px;
  min-width: 150px;
}
.subnav h3 {
  font-size: 18px;
  margin: 5px;
  text-transform: uppercase;
}
.subnav h3:hover {
  cursor: pointer;
}
.subnav li {
  list-style-type: none;
}

.subnav-header {
}

.subnav-drawer {
}

.subnav-selected {
  text-decoration: underline;
  font-size: 1.15em;
}

.subnav-strong-link {
  font-size: 18px;
  font-weight: bold;
  margin: 0px 0px 20px 5px;
}

.subnav-strong-link:before {
  margin-right: 5px;
}

.js-hidden {
  max-height: 0;
  overflow: hidden;
}

.flex-container {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  margin: 120px 10px 0 10px;
}
@media only screen and (min-width: 768px) and (max-width: 1000px) {
  .flex-container {
    margin-top: 150px;
  }
}
@media only screen and (max-width: 768px) {
  .flex-container {
    margin-top: 60px;
  }
}

.flex-content {
  flex: 1 1 0;
  width: 100%;
  max-width: 1000px;
}

.flex-row {
  flex: 1 100%;
}

@media only screen and (max-width: 1000px) {
  .abc-blog-feed {
    width: 96vw;
  }
}

.doc-index-table {
  width: 100%;
  font-size: 1.7vh;
}

.hero-box {
  text-align: center;
  background: #e9f4ff;
  border-radius: 12px;
  padding: 20px;
}

.download-button {
  font-size: 20px;
}

